force-app/main/default/objects/CondicaoPagamento__c/CondicaoPagamento__c.object-meta.xml
<CustomObject>
    <label>Condição de Pagamento</label>
    <nameField>
        <label>Descrição</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Condições de Pagamentos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>