force-app/main/default/objects/CondicaoPagamento__c/fields/BarterCondition__c.field-meta.xml
<CustomField>
    <fullName>BarterCondition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Condição Barter</label>
    <type>Checkbox</type>
</CustomField>