force-app/main/default/objects/CondicaoPagamento__c/fields/CashPayment__c.field-meta.xml
<CustomField>
    <fullName>CashPayment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pagamento à Vista</label>
    <type>Checkbox</type>
</CustomField>